tests/snapshots/shell__bad_redirect_position.snap
---
source: tests/shell.rs
expression: stdout
---
Error: unexpected token: pipe, expected newline after file write redirection
   ╭─[bad_redirect_position.tmp:1:20]
   │
 1 │ echo hi > file.txt | cat
   │                    ┬  
   │                    ╰── error happened here
───╯

